Engines query handle

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,13 @@
                 <button></button>
             </div>
         </header>
-
-        <div class="search_input">
-            <span class="opening_tilda">~$ </span>
-            <span class="command_open">open </span>
-            <span class="opening_engine">~/<span><span class="search_engine">google</span><span class="closing_engine">/"</span><input class="search_input_text" type="text" method="get"><span class="search_input_measure"></span><span class="closing_request">"</span>
-        </div>
+        <form class="form_input_text" action="https://google/search" method="get"></form>
+            <div class="search_input">
+                <span class="opening_tilda">~$ </span>
+                <span class="command_open">open </span>
+                <span class="opening_engine">~/<span><span class="search_engine">google</span><span class="closing_engine closing_engine_active">/"</span><input class="search_input_text" type="text" name="q"><span class="search_input_measure"></span><span class="closing_request">"</span>
+            </div>
+        </form>
 
         <div class="engines_row">
             <div class="engines">
